--- a/index.html
+++ b/index.html
@@ -1,102 +1,111 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="mobile-web-app-capable" content="yes">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Map</title>
+  <title>Interactive College Map - خريطة الكلية التفاعلية</title>
 
-  <!-- ✅ منع Samsung من فرض الوضع الداكن -->
+  <!-- ✅ PWA Support -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  
+  <!-- ✅ منع Samsung Dark Mode -->
   <meta name="color-scheme" content="only light">
   <meta name="supported-color-schemes" content="light">
-
-  <!-- ✅ لون الثيم للمتصفح -->
   <meta name="theme-color" content="#000000">
 
+  <!-- ✅ SEO -->
+  <meta name="description" content="خريطة تفاعلية للمنهج الطبي - تصفح المحاضرات والأسئلة بسهولة">
+  <meta name="keywords" content="طب، منهج، خريطة تفاعلية، محاضرات، أسئلة">
+
   <!-- ✅ Preconnect لـ GitHub (تسريع التحميل) -->
-  <link rel="preconnect" href="https://raw.githubusercontent.com">
-  <link rel="dns-prefetch" href="https://raw.githubusercontent.com">
-  <link rel="preconnect" href="https://api.github.com">
-  <link rel="dns-prefetch" href="https://api.github.com">
+  <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
+  <link rel="preconnect" href="https://api.github.com" crossorigin>
+  <link rel="dns-prefetch" href="https://mozilla.github.io">
 
-  <!-- ✅ Preload للخلفية الخشبية -->
-  <link rel="preload" href="image/wood.webp" as="image">
+  <!-- ✅ Preload للصور المهمة -->
+  <link rel="preload" href="image/wood.webp" as="image" type="image/webp">
+  <link rel="preload" href="image/0.png" as="image" type="image/png">
 
+  <!-- ✅ Favicon -->
+  <link rel="icon" type="image/png" href="image/0.png">
+  <link rel="apple-touch-icon" href="image/0.png">
+
+  <!-- ✅ CSS الرئيسي -->
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/webp" href="image/0.png">
-
-  <!-- ✅ منع الفلاتر التلقائية من Samsung -->
-  <style>
-    html {
-      color-scheme: only light !important;
-      -webkit-color-scheme: only light !important;
-      background-color: #000000 !important;
-    }
-
-    body, #main-svg, * {
-      color-scheme: only light !important;
-      -webkit-color-scheme: only light !important;
-    }
-
-    /* منع Samsung من تطبيق الفلاتر */
-    html, body, div, svg, image, img {
-      filter: none !important;
-      -webkit-filter: none !important;
-    }
-  </style>
 </head>
 <body>
 
 <!-- شاشة اختيار الجروب -->
 <div id="group-selection-screen">
   <div id="group-selection-content">
-    <img id="main-logo" src="image/0.png" alt="Logo" />
+    <img id="main-logo" src="image/0.png" alt="شعار الكلية" loading="eager" />
     <h1>اختر مجموعتك</h1>
     <div id="group-buttons">
-      <button class="group-btn" data-group="A">
+      <button class="group-btn" data-group="A" aria-label="اختر المجموعة A">
         <span class="group-letter">A</span>
         <span class="group-label">Group A</span>
       </button>
-      <button class="group-btn" data-group="B">
+      <button class="group-btn" data-group="B" aria-label="اختر المجموعة B">
         <span class="group-letter">B</span>
         <span class="group-label">Group B</span>
       </button>
-      <button class="group-btn" data-group="C">
+      <button class="group-btn" data-group="C" aria-label="اختر المجموعة C">
         <span class="group-letter">C</span>
         <span class="group-label">Group C</span>
       </button>
-      <button class="group-btn" data-group="D">
+      <button class="group-btn" data-group="D" aria-label="اختر المجموعة D">
         <span class="group-letter">D</span>
         <span class="group-label">Group D</span>
       </button>
     </div>
-    <p style="color: #888; font-size: 12px; margin-top: 20px;">💡 يمكنك تغيير المجموعة لاحقاً من زر "🔄 Change Group"</p>
+    <p style="color: #888; font-size: 12px; margin-top: 20px;">
+      💡 يمكنك تغيير المجموعة لاحقاً من زر "🔄 Change Group"
+    </p>
   </div>
 </div>
 
+<!-- أدوات التحكم -->
 <div id="js-toggle-container" class="top">
   <div id="search-container">
-    <input type="text" id="search-input" placeholder="ابحث باسم الملف...">
-    <span id="search-icon" class="clickable-area">🔙</span>
+    <input 
+      type="text" 
+      id="search-input" 
+      placeholder="ابحث باسم الملف..."
+      autocomplete="off"
+      aria-label="حقل البحث"
+    >
+    <span id="search-icon" class="clickable-area" role="button" aria-label="بحث">🔙</span>
   </div>
   <div class="controls-row">
-    <span id="move-toggle" style="cursor:pointer; font-size: 18px;">↕️</span>
+    <span 
+      id="move-toggle" 
+      role="button" 
+      aria-label="تحريك شريط الأدوات"
+      tabindex="0"
+    >↕️</span>
     <div style="display: flex; align-items: center; gap: 8px;">
       <span style="font-size: 12px; opacity: 0.8;">Interaction</span>
       <label class="switch">
-        <input type="checkbox" id="js-toggle" checked>
+        <input type="checkbox" id="js-toggle" checked aria-label="تفعيل التفاعل">
         <span class="slider round"></span>
       </label>
     </div>
   </div>
 </div>
 
+<!-- شاشة التحميل -->
 <div id="loading-overlay">
   <div id="loading-content">
-    <img id="splash-image" src="image/0.png" />
+    <img 
+      id="splash-image" 
+      src="image/0.png" 
+      alt="شعار التحميل"
+      loading="eager"
+    />
     <h1>Interactive College Map</h1>
-    <div id="loader-lights">
+    <div id="loader-lights" role="progressbar" aria-label="تقدم التحميل">
       <div class="light-bulb" id="bulb-1"></div>
       <div class="light-bulb" id="bulb-2"></div>
       <div class="light-bulb" id="bulb-3"></div>
@@ -113,40 +122,88 @@
   </div>
 </div>
 
+<!-- عارض PDF -->
 <div id="pdf-overlay" class="hidden">
   <div id="toolbar">
-    <button id="closePdfBtn" class="toolbar-btn">❌ إغلاق</button>
-    <button id="downloadBtn" class="toolbar-btn">⬇ تحميل</button>
-    <button id="shareBtn" class="toolbar-btn">🔗 مشاركة</button>
+    <button id="closePdfBtn" class="toolbar-btn" aria-label="إغلاق">❌ إغلاق</button>
+    <button id="downloadBtn" class="toolbar-btn" aria-label="تحميل">⬇ تحميل</button>
+    <button id="shareBtn" class="toolbar-btn" aria-label="مشاركة">🔗 مشاركة</button>
   </div>
-  <iframe id="pdfFrame" src="" loading="lazy"></iframe>
+  <iframe 
+    id="pdfFrame" 
+    src="" 
+    loading="lazy"
+    title="عارض PDF"
+    sandbox="allow-same-origin allow-scripts allow-popups allow-forms"
+  ></iframe>
 </div>
 
+<!-- SVG الرئيسي -->
 <div id="scroll-container">
-  <svg id="main-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" preserveAspectRatio="xMinYMin meet">
+  <svg 
+    id="main-svg" 
+    xmlns="http://www.w3.org/2000/svg" 
+    xmlns:xlink="http://www.w3.org/1999/xlink" 
+    preserveAspectRatio="xMinYMin meet"
+    role="img"
+    aria-label="الخريطة التفاعلية"
+  >
     <defs></defs>
 
     <g transform="translate(0,0)" id="files-list-container">
-      <image data-src="image/wood.webp" x="0" y="0" width="1024" height="2454" />
+      <image 
+        data-src="image/wood.webp" 
+        x="0" 
+        y="0" 
+        width="1024" 
+        height="2454"
+        aria-hidden="true"
+      />
 
-      <g id="change-group-btn" style="cursor: pointer;">
+      <g id="change-group-btn" style="cursor: pointer;" role="button" tabindex="0">
         <rect x="120" y="100" width="250" height="50" rx="10" fill="#2e7d32" stroke="#fff"/>
-        <text id="group-btn-text" x="245" y="130" text-anchor="middle" fill="white" font-weight="bold">Change Group 🔄</text>
+        <text 
+          id="group-btn-text" 
+          x="245" 
+          y="130" 
+          text-anchor="middle" 
+          fill="white" 
+          font-weight="bold"
+        >Change Group 🔄</text>
       </g>
 
-      <g id="back-button-group" style="cursor: pointer;">
-        <rect id="back-btn" x="112" y="160" width="800" height="70" rx="15" fill="#3e2723" stroke="#fff" stroke-width="2" />
-        <text x="512" y="205" id="back-btn-text" text-anchor="middle" fill="white" font-size="22" font-weight="bold">➡️ إلى الخريطة ➡️</text>
+      <g id="back-button-group" style="cursor: pointer;" role="button" tabindex="0">
+        <rect 
+          id="back-btn" 
+          x="112" 
+          y="160" 
+          width="800" 
+          height="70" 
+          rx="15" 
+          fill="#3e2723" 
+          stroke="#fff" 
+          stroke-width="2" 
+        />
+        <text 
+          x="512" 
+          y="205" 
+          id="back-btn-text" 
+          text-anchor="middle" 
+          fill="white" 
+          font-size="22" 
+          font-weight="bold"
+        >➡️ إلى الخريطة ➡️</text>
       </g>
     </g>
+
     <g id="dynamic-links-group"></g>
-
-    <!-- مكان حقن SVG الخاص بكل Group -->
     <g id="group-specific-content"></g>
-
   </svg>
 </div>
-<script src="script.js"></script>
-<script src="tracker.js"></script>
+
+<!-- ✅ Scripts مع defer للأداء الأفضل -->
+<script defer src="script.js"></script>
+<script defer src="tracker.js"></script>
+
 </body>
 </html>
