--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
+
+<!-- ✅ منع التخزين المؤقت للصفحة الرئيسية -->
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+<meta http-equiv="Pragma" content="no-cache">
+<meta http-equiv="Expires" content="0">
+
+<!-- ✅ رقم الإصدار (يساعد في تتبع التحديثات) -->
+<meta name="version" content="2025.01.13.002">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Interactive College Map - خريطة الكلية التفاعلية</title>
