--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive College Map - خريطة الكلية التفاعلية</title>
+  <title>semester-3 - خريطة الكلية التفاعلية</title>
 
   <!-- ✅ PWA Support -->
   <meta name="apple-mobile-web-app-capable" content="yes">
