--- a/index.html
+++ b/index.html
@@ -1,29 +1,23 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-
 <!-- ✅ منع التخزين المؤقت للصفحة الرئيسية -->
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-
 <!-- ✅ رقم الإصدار (يساعد في تتبع التحديثات) -->
 <meta name="version" content="2025.01.13.002">
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
-
   <!-- ✅ PWA Support -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-
   <!-- ✅ منع Samsung Dark Mode -->
   <meta name="color-scheme" content="only light">
   <meta name="supported-color-schemes" content="light">
-  <meta name="theme-color" content="#000000">
-
+  <meta name="theme-color" content="#000000"
   <!-- ✅ SEO -->
   <meta name="description" content="خريطة تفاعلية للمنهج الطبي - تصفح المحاضرات والأسئلة بسهولة">
   <meta name="keywords" content="طب، منهج، خريطة تفاعلية، محاضرات، أسئلة">
@@ -32,15 +26,12 @@
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
   <link rel="preconnect" href="https://api.github.com" crossorigin>
   <link rel="dns-prefetch" href="https://mozilla.github.io">
-
   <!-- ✅ Preload للصور المهمة -->
   <link rel="preload" href="image/wood.webp" as="image" type="image/webp">
   <link rel="preload" href="image/0.png" as="image" type="image/png">
-
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/png" href="image/0.png">
   <link rel="apple-touch-icon" href="image/0.png">
-
   <!-- ✅ CSS الرئيسي -->
   <link rel="stylesheet" href="style.css">
 </head>
