--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/png" href="image/0.png">
   <link rel="apple-touch-icon" href="image/0.png">
+<link rel="preload" href="image/logo-A.webp" as="image" type="image/webp">
+<link rel="preload" href="image/logo-B.webp" as="image" type="image/webp">
+<link rel="preload" href="image/logo-C.webp" as="image" type="image/webp">
+<link rel="preload" href="image/logo-D.webp" as="image" type="image/webp">
   <!-- ✅ CSS الرئيسي -->
   <link rel="stylesheet" href="style.css">
 </head>
