--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 <!-- ✅ رقم الإصدار (يساعد في تتبع التحديثات) -->
-<meta name="version" content="2025.01.13.005">
+<meta name="version" content="2025.01.14.001">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
@@ -26,7 +26,7 @@
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
   <link rel="preconnect" href="https://api.github.com" crossorigin>
   <link rel="dns-prefetch" href="https://mozilla.github.io">
-  
+
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/png" href="image/0.png">
   <link rel="apple-touch-icon" href="image/0.png">
@@ -41,7 +41,7 @@
   <div id="initial-loading-content">
     <img id="initial-logo" src="image/0.png" alt="شعار الكلية" />
     <h1>جاري تحميل الملفات الأساسية...</h1>
-    
+
     <!-- ✅ دائرة النسبة المئوية -->
     <div class="circular-progress-container">
       <svg class="circular-progress" width="200" height="200">
@@ -52,7 +52,7 @@
         <span id="initial-progress-percentage">0%</span>
       </div>
     </div>
-    
+
     <p id="initial-loading-status">جاري التحضير...</p>
   </div>
 </div>
@@ -115,32 +115,6 @@
   </div>
 </div>
 
-<!-- شاشة التحميل (بعد اختيار الجروب) -->
-<div id="loading-overlay" class="hidden">
-  <div id="loading-content">
-    <img 
-      id="splash-image" 
-      src="image/0.png" 
-      alt="شعار التحميل"
-    />
-    <h1 id="project-loading-title">جاري التحميل...</h1>
-    <div id="loader-lights" role="progressbar" aria-label="تقدم التحميل">
-      <div class="light-bulb" id="bulb-1"></div>
-      <div class="light-bulb" id="bulb-2"></div>
-      <div class="light-bulb" id="bulb-3"></div>
-      <div class="light-bulb" id="bulb-4"></div>
-    </div>
-    <div id="legend">
-      <div class="legend-item red">أسئلة</div>
-      <div class="legend-item yellow">محاضرات</div>
-      <div class="legend-item white">مواد أخرى</div>
-      <div class="legend-item purple">إجابات</div>
-      <div class="legend-item green">سكاشن العملي</div>
-      <div class="legend-item blue">فيديو شرح</div>
-    </div>
-  </div>
-</div>
-
 <!-- عارض PDF -->
 <div id="pdf-overlay" class="hidden">
   <div id="toolbar">
@@ -179,7 +153,7 @@
         aria-hidden="true"
       />
 
-      <!-- ✅ زر مسح الكاش (سيميتري مع زر تغيير الجروب) -->
+      <!-- ✅ زر مسح الكاش -->
       <g id="clear-cache-btn-svg" style="cursor: pointer;" role="button" tabindex="0">
         <rect x="654" y="100" width="250" height="50" rx="10" fill="#667eea" stroke="#fff"/>
         <text 
