Remove inline style to show scroll container

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   ></iframe>
 </div>
 
-<div id="scroll-container" style="display: none;">
+<div id="scroll-container">
   <svg 
     id="main-svg" 
     xmlns="http://www.w3.org/2000/svg" 
