--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
 <!-- ✅ رقم الإصدار (يساعد في تتبع التحديثات) -->
-<meta name="version" content="2025.01.13.005">
+<meta name="version" content="2025.01.14.001">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
@@ -26,7 +26,7 @@
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
   <link rel="preconnect" href="https://api.github.com" crossorigin>
   <link rel="dns-prefetch" href="https://mozilla.github.io">
-
+  
   <!-- ✅ Favicon -->
   <link rel="icon" type="image/png" href="image/0.png">
   <link rel="apple-touch-icon" href="image/0.png">
@@ -36,31 +36,25 @@
 </head>
 <body>
 
-<!-- ✅ شاشة التحميل الأولية (قبل اختيار الجروب) -->
+<!-- شاشة التحميل الأولية -->
 <div id="initial-loading-screen">
   <div id="initial-loading-content">
-    <img id="initial-logo" src="image/0.png" alt="شعار الكلية" />
-    <h1>جاري تحميل الملفات الأساسية...</h1>
-
-    <!-- ✅ دائرة النسبة المئوية -->
-    <div class="circular-progress-container">
-      <svg class="circular-progress" width="200" height="200">
-        <circle class="progress-bg" cx="100" cy="100" r="85"></circle>
-        <circle class="progress-bar" cx="100" cy="100" r="85"></circle>
-      </svg>
-      <div class="progress-text">
-        <span id="initial-progress-percentage">0%</span>
+    <img src="image/0.png" alt="شعار الكلية" class="initial-logo" loading="eager" />
+    <h1>جاري تحميل النظام...</h1>
+    <div id="initial-progress-container">
+      <div id="initial-progress-bar">
+        <div id="initial-progress-fill"></div>
       </div>
+      <p id="initial-progress-text">0%</p>
+      <p id="initial-progress-status">تهيئة النظام...</p>
     </div>
-
-    <p id="initial-loading-status">جاري التحضير...</p>
   </div>
 </div>
 
 <!-- شاشة اختيار الجروب -->
 <div id="group-selection-screen" class="hidden">
   <div id="group-selection-content">
-    <img id="main-logo" src="image/0.png" alt="شعار الكلية" />
+    <img id="main-logo" src="image/0.png" alt="شعار الكلية" loading="eager" />
     <h1>اختر مجموعتك</h1>
     <div id="group-buttons">
       <button class="group-btn" data-group="A" aria-label="اختر المجموعة A">
@@ -87,7 +81,7 @@
 </div>
 
 <!-- أدوات التحكم -->
-<div id="js-toggle-container" class="top" style="display: none;">
+<div id="js-toggle-container" class="top">
   <div id="search-container">
     <input 
       type="text" 
@@ -115,13 +109,14 @@
   </div>
 </div>
 
-<!-- شاشة التحميل (بعد اختيار الجروب) -->
-<div id="loading-overlay" class="hidden">
+<!-- شاشة التحميل -->
+<div id="loading-overlay">
   <div id="loading-content">
     <img 
       id="splash-image" 
       src="image/0.png" 
       alt="شعار التحميل"
+      loading="eager"
     />
     <h1 id="project-loading-title">جاري التحميل...</h1>
     <div id="loader-lights" role="progressbar" aria-label="تقدم التحميل">
@@ -158,7 +153,7 @@
 </div>
 
 <!-- SVG الرئيسي -->
-<div id="scroll-container" style="display: none;">
+<div id="scroll-container">
   <svg 
     id="main-svg" 
     xmlns="http://www.w3.org/2000/svg" 
@@ -179,20 +174,21 @@
         aria-hidden="true"
       />
 
-      <!-- ✅ زر مسح الكاش (سيميتري مع زر تغيير الجروب) -->
-      <g id="clear-cache-btn-svg" style="cursor: pointer;" role="button" tabindex="0">
-        <rect x="654" y="100" width="250" height="50" rx="10" fill="#667eea" stroke="#fff"/>
+      <g id="clear-cache-btn" style="cursor: pointer;" role="button" tabindex="0">
+        <rect x="654" y="100" width="250" height="50" rx="10" fill="#764ba2" stroke="#fff" stroke-width="2"/>
         <text 
+          id="clear-cache-text" 
           x="779" 
           y="130" 
           text-anchor="middle" 
           fill="white" 
           font-weight="bold"
-        >Clear Cache 🗑️</text>
+          font-size="18"
+        >🗑️ Clear Cache</text>
       </g>
 
       <g id="change-group-btn" style="cursor: pointer;" role="button" tabindex="0">
-        <rect x="120" y="100" width="250" height="50" rx="10" fill="#2e7d32" stroke="#fff"/>
+        <rect x="120" y="100" width="250" height="50" rx="10" fill="#2e7d32" stroke="#fff" stroke-width="2"/>
         <text 
           id="group-btn-text" 
           x="245" 
@@ -200,6 +196,7 @@
           text-anchor="middle" 
           fill="white" 
           font-weight="bold"
+          font-size="18"
         >Change Group 🔄</text>
       </g>
 
