--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <div id="initial-loading-overlay" class="active">
   <div id="initial-loading-content">
     <img id="initial-logo" src="image/0.png" alt="شعار الكلية" />
-    <h1>***جاري تحميل الموارد الأساسية...***<_h2>
+    <h1>***جاري تحميل الموارد الأساسية...***</h1>
 <h2>(هذه التحميل يتم لمره واحده فقط لأن يتم تخزينه علي الكاش)</h2>
     
     <!-- دائرة التقدم -->
