--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="Expires" content="0">
-<meta name="version" content="2025.01.15.001">
+<meta name="version" content="2025.01.15.002">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>semester-3 / خريطة الكلية التفاعلية</title>
@@ -15,14 +15,14 @@
   <meta name="supported-color-schemes" content="light">
   <meta name="theme-color" content="#000000">
   <meta name="description" content="خريطة تفاعلية للمنهج الطبي - تصفح المحاضرات والأسئلة بسهولة">
-  
+
   <link rel="preconnect" href="https://raw.githubusercontent.com" crossorigin>
   <link rel="preconnect" href="https://api.github.com" crossorigin>
   <link rel="dns-prefetch" href="https://mozilla.github.io">
-  
+
   <link rel="icon" type="image/png" href="image/0.png">
   <link rel="apple-touch-icon" href="image/0.png">
-  
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -30,10 +30,9 @@
 <!-- 🔵 شاشة التحميل الأولى (قبل اختيار الجروب) -->
 <div id="initial-loading-overlay" class="active">
   <div id="initial-loading-content">
-    <img id="initial-logo" src="image/0.png" alt="شعار الكلية" />
-    <h1>***جاري تحميل الموارد الأساسية...***</h1>
-<h2>(هذه التحميل يتم لمره واحده فقط لأن يتم تخزينه علي الكاش)</h2>
-    
+    <h1>جاري تحميل الموارد الأساسية...</h1>
+    <h2 style="font-size: 1rem; color: #aaa; font-weight: normal;">(هذا التحميل يتم لمرة واحدة فقط)</h2>
+
     <!-- دائرة التقدم -->
     <div class="circular-progress">
       <svg width="150" height="150" viewBox="0 0 150 150">
@@ -61,7 +60,7 @@
         >0%</text>
       </svg>
     </div>
-    
+
     <p id="loading-status" style="color: #aaa; margin-top: 20px;">جاري التهيئة...</p>
   </div>
 </div>
@@ -186,26 +185,28 @@
 
       <!-- ✅ زر تغيير الجروب -->
       <g id="change-group-btn" style="cursor: pointer;" role="button" tabindex="0">
-        <rect x="120" y="100" width="250" height="50" rx="10" fill="#2e7d32" stroke="#fff" stroke-width="2"/>
+        <rect x="120" y="100" width="250" height="50" rx="10" 
+              fill="none" stroke="#2e7d32" stroke-width="3"/>
         <text 
           id="group-btn-text" 
           x="245" 
           y="130" 
           text-anchor="middle" 
-          fill="white" 
+          fill="#2e7d32" 
           font-weight="bold"
           font-size="16"
         >Change Group 🔄</text>
       </g>
 
-      <!-- ✅ زر مسح الكاش (متماثل) -->
+      <!-- ✅ زر مسح الكاش -->
       <g id="clear-cache-svg-btn" style="cursor: pointer;" role="button" tabindex="0">
-        <rect x="654" y="100" width="250" height="50" rx="10" fill="#764ba2" stroke="#fff" stroke-width="2"/>
+        <rect x="654" y="100" width="250" height="50" rx="10" 
+              fill="none" stroke="#764ba2" stroke-width="3"/>
         <text 
           x="779" 
           y="130" 
           text-anchor="middle" 
-          fill="white" 
+          fill="#764ba2" 
           font-weight="bold"
           font-size="16"
         >مسح الكاش 🗑️</text>
@@ -220,16 +221,16 @@
           width="800" 
           height="70" 
           rx="15" 
-          fill="#3e2723" 
-          stroke="#fff" 
-          stroke-width="2" 
+          fill="none"
+          stroke="#3e2723" 
+          stroke-width="3" 
         />
         <text 
           x="512" 
           y="205" 
           id="back-btn-text" 
           text-anchor="middle" 
-          fill="white" 
+          fill="#3e2723" 
           font-size="22" 
           font-weight="bold"
         >➡️ إلى الخريطة ➡️</text>
