--- a/index.html
+++ b/index.html
@@ -165,6 +165,20 @@
         aria-hidden="true"
       />
 
+      <!-- ✅ زر مسح الكاش - على الشمال (مرآة لزر Change Group) -->
+      <g id="clear-cache-btn" style="cursor: pointer;" role="button" tabindex="0">
+        <rect x="654" y="100" width="250" height="50" rx="10" fill="#667eea" stroke="#fff"/>
+        <text 
+          id="clear-cache-btn-text" 
+          x="779" 
+          y="130" 
+          text-anchor="middle" 
+          fill="white" 
+          font-weight="bold"
+        >🗑️ مسح الكاش</text>
+      </g>
+
+      <!-- ✅ زر تغيير الجروب - على اليمين (كما هو) -->
       <g id="change-group-btn" style="cursor: pointer;" role="button" tabindex="0">
         <rect x="120" y="100" width="250" height="50" rx="10" fill="#2e7d32" stroke="#fff"/>
         <text 
@@ -177,6 +191,7 @@
         >Change Group 🔄</text>
       </g>
 
+      <!-- ✅ زر الرجوع -->
       <g id="back-button-group" style="cursor: pointer;" role="button" tabindex="0">
         <rect 
           id="back-btn" 
