--- a/index.html
+++ b/index.html
@@ -165,22 +165,23 @@
         aria-hidden="true"
       />
 
-      <!-- ✅ زر مسح الكاش - على الشمال (مرآة لزر Change Group) -->
-      <g id="clear-cache-btn" style="cursor: pointer;" role="button" tabindex="0">
-        <rect x="654" y="100" width="250" height="50" rx="10" fill="#667eea" stroke="#fff"/>
+      <!-- ✅ زر Reset - على الشمال (مرآة لزر Change Group) -->
+      <g id="reset-btn" style="cursor: pointer;" role="button" tabindex="0">
+        <rect x="654" y="100" width="250" height="50" rx="10" fill="#d32f2f" stroke="#fff" stroke-width="2"/>
         <text 
-          id="clear-cache-btn-text" 
+          id="reset-btn-text" 
           x="779" 
           y="130" 
           text-anchor="middle" 
           fill="white" 
           font-weight="bold"
-        >🗑️ مسح الكاش</text>
+          font-size="18"
+        >🔄 Reset</text>
       </g>
 
       <!-- ✅ زر تغيير الجروب - على اليمين (كما هو) -->
       <g id="change-group-btn" style="cursor: pointer;" role="button" tabindex="0">
-        <rect x="120" y="100" width="250" height="50" rx="10" fill="#2e7d32" stroke="#fff"/>
+        <rect x="120" y="100" width="250" height="50" rx="10" fill="#2e7d32" stroke="#fff" stroke-width="2"/>
         <text 
           id="group-btn-text" 
           x="245" 
@@ -188,6 +189,7 @@
           text-anchor="middle" 
           fill="white" 
           font-weight="bold"
+          font-size="18"
         >Change Group 🔄</text>
       </g>
 
