--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       >👁️</span>
     </div>
     <div style="display: flex; align-items: center; gap: 8px;">
-      <span style="font-size: 12px; opacity: 0.8;">Interaction</span>
+      <span style="font-size: 12px; opacity: 0.8;">hover</span>
       <label class="switch">
         <input type="checkbox" id="js-toggle" checked aria-label="تفعيل التفاعل">
         <span class="slider round"></span>
